# HiBit-mod-ready-or-not

./: CMakeLists.txt
include/: audio_processor.h  config.h  pak_types.h  pch.h  resource_manager.h  vorbis_proxy.h  vorbis_types.h
src/: audio_processor.cpp  dllmain.cpp  resource_manager.cpp  vorbis_proxy.cpp
